[package]
name = "rust_game_of_life"
version = "0.0.1"
authors = [ "James K" ]
readme = "README.md"
license = "MIT"

[dependencies]
piston = "0.17.0"
piston2d-graphics = "0.13.0"
piston2d-opengl_graphics = "0.23.0"
log = "0.3"
env_logger = "0.3.3"
threadpool = "1.0"

[dependencies.pistoncore-sdl2_window]
version = "0.23.0"